# evopt

./: openapi.yaml  pyproject.toml
.github/workflows/: deploy.yml
client/: client.gen.go
cmd/: client.go
infra/: main.bicep
src/evopt/: app.py  optimizer.py
test_cases/: 016-battery-charge-priotization-1.json  017-battery-charge-priotization-2.json
tests/: test_app.py  testbench.py
