[project]
name = "evopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "andig", email = "andi@evcc.io" }, { name = "ekke" }]
requires-python = "~=3.13.0"
dependencies = [
    "flask>=3.0.3",
    "flask-restx>=1.3.0",
    "gunicorn>=22.0.0",
    "matplotlib",
    "numpy>=2.3.1",
    "pandas>=2.3.3",
    "pulp>=3.2.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.8.0",
    "tabulate",
    "werkzeug>=3.0.3",
]

[project.scripts]
evopt = "evopt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "locust>=2.41.6",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.autopep8]
max_line_length = 160
# Can't set recursive here as it breaks
# the autopep8 extension for VSCode
# recursive = true

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["F", "I", "E", "W", "PL"]
ignore = ["PLR0912", "PLR0913", "PLR2004", "PLR0917", "PLR6301"]
